<resources>
    <string name="app_name">CheckЛистик</string>
    <string name="InputText">Введите название комплектующей</string>
    <string name="Add">Добавить</string>
    <string name="ChooseComponent">Выбрать компонент</string>
    <string name="Reset">Сброс</string>
    <string name="ShowComponents">Отобразить значения</string>
    <string name="delete_selected">Удалить выбранные</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>